styles.css line spacing fix

--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,57 @@
-.path-mod-percipio #fitem_id_completion + div, .path-mod-percipio #id_modstandardgrade, .path-mod-percipio .show_error {
-	display:none;
+.path-mod-percipio #fitem_id_completion + div,
+.path-mod-percipio #id_modstandardgrade,
+.path-mod-percipio .show_error {
+    display:none;
 }
 
 .path-mod-percipio .img-cover {
-	object-fit: cover;
-	width: 100%;
+    object-fit: cover;
+    width: 100%;
 }
 
 .path-mod-percipio .top {
-	margin-top: 20px;
+    margin-top: 20px;
 }
 
 .path-mod-percipio .loader {
-	border: 16px solid #f3f3f3;
-	border-radius: 50%;
-	border-top: 16px solid #3498db;
-	width: 120px;
-	height: 120px;
-	-webkit-animation: spin 2s linear infinite; /* Safari */
-	animation: spin 2s linear infinite;
-	position:absolute;top:50%;left:45.5%;
-	
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;             
+    animation: spin 2s linear infinite;
+    position:absolute;top:50%;left:45.5%;
 }
 
 .path-mod-percipio .loader_background {
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background-color: rgba(0,0,0,.5);
-	display: none;
-	z-index: 99999999999;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.5);
+    display: none;
+    z-index: 99999999999;
 }
 
-/* Safari */
+/* Safari. */
 @-webkit-keyframes spin {
-	0% { -webkit-transform: rotate(0deg); }
-	100% { -webkit-transform: rotate(360deg); }
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
 }
 
 @keyframes spin {
-	0% { transform: rotate(0deg); }
-	100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
